--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/search_artist"
+        android:imeOptions="actionSearch"
         android:singleLine="true"/>
     <ListView
         android:layout_width="match_parent"
