--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/search_artist"
         android:imeOptions="actionSearch"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:textColor="@color/app_maroon"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
