--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,8 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="com.santhoshn.spotifystreamer.MainActivityFragment"
-    tools:layout="@layout/fragment_main" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_artists"
+    android:name="com.santhoshn.spotifystreamer.ArtistFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.santhoshn.spotifystreamer.MainActivity"
+    tools:layout="@layout/fragment_artists" />
