--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <color name="red">#FFFFFF</color>
-    <color name="app_primary">#e8ae30</color>
-    <color name="app_primary_dark">#de8b27</color>
+    <color name="app_primary">#FF9100</color>
+    <color name="app_primary_dark">#FF6D00</color>
     <color name="app_maroon">#930b0b</color>
+    <color name="row_pressed">#FFB74D</color>
+    <color name="row_selected">#FFCC80</color>
 </resources>
