--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="app_primary_dark">#FF6D00</color>
     <color name="app_maroon">#930b0b</color>
     <color name="row_pressed">#FFB74D</color>
-    <color name="row_selected">#FFCC80</color>
+    <color name="row_selected">#FFE0B2</color>
 </resources>
