moved callback interface to separate java interface for inheritance

--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:orientation="vertical"
-    tools:context=".PlayerActivityFragment">
+    tools:context="com.santhoshn.spotifystreamer.PlayerActivityFragment">
 
     <TextView
         android:id="@+id/playing_artist_name"
