--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,5 +1,7 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/player_container"
-    android:name="com.santhoshn.spotifystreamer.PlayerActivityFragment"
-    tools:layout="@layout/fragment_player" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/player_container"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.santhoshn.spotifystreamer.PlayerActivity"
+tools:ignore="MergeRootFrame" />
