--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="32dp"
     android:orientation="vertical"
     tools:context="com.santhoshn.spotifystreamer.PlayerActivityFragment">
 
@@ -24,10 +24,10 @@
         android:text="Madras Movie"
         android:layout_gravity="center_horizontal" />
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_margin="10dp"
-        android:id="@+id/playing_track_artwork" />
+        android:id="@+id/playing_album_artwork" />
     <TextView
         android:id="@+id/playing_track_name"
         android:layout_width="wrap_content"
@@ -39,24 +39,24 @@
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
+        android:id="@+id/scrubBar"
         android:paddingLeft="0dp"
         android:paddingRight="0dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/playing_start_second"
+            android:id="@+id/track_start_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="5sp"
+            android:textSize="12sp"
             android:text="0:00"
             android:layout_gravity="left" />
         <TextView
-            android:id="@+id/playing_end_second"
+            android:id="@+id/track_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="5sp"
+            android:textSize="12sp"
             android:text="5:00"
             android:gravity="right"
             android:layout_weight="1" />
@@ -81,7 +81,7 @@
             android:src="@android:drawable/ic_media_play"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="5dp" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -90,6 +90,6 @@
             android:src="@android:drawable/ic_media_next"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="5dp" />
     </LinearLayout>
 </LinearLayout>
