--- a/app/src/main/res/layout/activity_top_ten_tracks.xml
+++ b/app/src/main/res/layout/activity_top_ten_tracks.xml
@@ -3,5 +3,5 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/topten_tracks_container"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.santhoshn.spotifystreamer.TopTenTracksActivity"
+tools:context="com.santhoshn.spotifystreamer.TopTracksActivity"
 tools:ignore="MergeRootFrame" />
