--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -12,8 +12,6 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="15sp"
-        android:text="Santhosh Narayanan"
-        android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
     <TextView
         android:id="@+id/playing_album_name"
@@ -21,11 +19,11 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="15sp"
-        android:text="Madras Movie"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:maxWidth="250dp"/>
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_margin="10dp"
         android:id="@+id/playing_album_artwork" />
     <TextView
@@ -34,14 +32,13 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="15sp"
-        android:text="Chennai Vada Chennai"
         android:layout_gravity="center_horizontal" />
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrubBar"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp" />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -50,15 +47,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:text="0:00"
-            android:layout_gravity="left" />
+            android:text="@string/track_start_time"
+            android:layout_gravity="start" />
         <TextView
             android:id="@+id/track_duration"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:text="5:00"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_weight="1" />
     </LinearLayout>
     <LinearLayout
