--- a/app/src/main/res/menu/menu_top_tracks.xml
+++ b/app/src/main/res/menu/menu_top_tracks.xml
@@ -2,6 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.santhoshn.spotifystreamer.TopTracksActivity">
+    <item android:id="@+id/action_now_playing"
+        android:title="@string/action_now_playing"
+        android:icon="@android:drawable/ic_media_play"
+        app:showAsAction="ifRoom"
+        android:visible="true" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
