--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,7 @@
     <item android:id="@+id/action_now_playing"
         android:title="@string/action_now_playing"
         android:icon="@android:drawable/ic_media_play"
-        app:showAsAction="ifRoom"
-        android:visible="true" />
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
