--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -13,7 +13,8 @@
         android:id="@+id/search_artist"
         android:imeOptions="actionSearch"
         android:singleLine="true"
-        android:textColor="@color/app_maroon"/>
+        android:textColor="@color/app_maroon"
+        android:hint="@string/searchPlaceholderText"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
